syntax = "proto3";
package seiprotocol.seichain.dex;

option go_package = "github.com/fibonacci-chain/core/x/dex/types";
import "dex/order_entry.proto"; 
import "gogoproto/gogo.proto";

message LongBook {
  string price = 1 [
      (gogoproto.moretags)   = "yaml:\"price\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "price"
  ];
  OrderEntry entry = 2 [
    (gogoproto.jsontag) = "entry"
  ]; 
  
}